Added Correct CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <!-- CSS -->
-<link rel="stylesheet" href="bhalluk.css" />
+<link rel="stylesheet" href="index.css" />
 <!-- CSS ICONS -->
 <link
   rel="stylesheet"
